2015-05-13 Fixed issue with adding custom class to panel in IWB Toolbar module
2015-05-12 Fixed issue with loading on iOS 8 in Count and Graph module
2015-05-11 Fixed visual issues after reset in Line Number module
2015-05-07 Fixed issue with ScoreType:first
2015-05-07 Added new events to Crossword module
2015-05-07 Added new property "Keyboard letters order" in Hangman module
2015-05-07 Fixed issue with reset button on IE and issue with missing labels in "memo game" module
2015-05-06 Fixed issue with scores and their view in Hierarchical Lesson Report
2015-05-06 Fixed issue with compatibility Drawing and IWB in IWBToolbar module
2015-05-04 Added Show Answers mode in Line Number module
2015-05-04 Changed names of classes in Check mode in Connection module
2015-05-04 Added Show Answers mode in Image Viewer module
2015-05-04 Fixed issue with Randomizing in Choice module
2015-04-30 Added drag&drop feature to Connection module
2015-04-30 Added Reset command to Puzzle module
2015-04-29 Added saving color and thickness after closing the tool in IWB Toolbar module
2015-04-29 Added 'correct' and 'wrong' classes in Check mode in Connection module
2015-04-29 Added LearnPen Data module
2015-04-27 Added reset command to Ordering module
2015-04-23 Fixed issue with button handlers in IWB Toolbar module
2015-04-23 Added property "Placeholder text" in Paragraph module
2015-04-23 Fixed issue with Show Answers in Not Activity mode in Text Selection module
2015-04-21 Fixed issue with math Gaps in Text module
2015-04-21 Fixed issue with ShowAnswers in Text module
2015-04-21 Fixed issue with parsing of mathgaps having editable syntax in Text module
2015-04-20 Fixed issue with moving slider on zoomed page in Slider module
2015-04-17 Fixed issue with gap causing crashing of Editor in Text module
2015-04-17 Added Italian language to eKeyboard module
2015-04-17 Fixed issue with rounding seconds in TextAudio module