@@ -1,3 +1,4 @@
+2015-05-13 Fixed issue with height of PagePopupPanel glass
 2015-05-13 Fixed issue with adding custom class to panel in IWB Toolbar module
 2015-05-12 Fixed issue with loading on iOS 8 in Count and Graph module
 2015-05-11 Fixed visual issues after reset in Line Number module
